# Github-uploader

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  i18n.ts  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: auth.rs  git.rs  github.rs  mod.rs  templates.rs
src/components/: LanguageSwitcher.tsx
src/locales/: en.json  zh.json
src/pages/: Auth.tsx  Progress.tsx  RepoSelect.tsx  SelectFolder.tsx  Templates.tsx
voice-source/: README.md
voice-source/aemeath/: source-note.txt
