[package]
name = "github-uploader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "github_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
keyring = "3"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
